--- a/bin/database.properties
+++ b/bin/database.properties
@@ -5,5 +5,6 @@ database.password=0928902877
 
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.id.new_generator_mappings = false
+hibernate.enable_lazy_load_no_trans = true
 hibernate.show_sql = true 
 hibernate.format_sql = true 
